--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name myapp.kaoru;
+    server_name myapp;
 
     # HTTP でのアクセスを HTTPS にリダイレクト
     return 301 https://$host$request_uri;
