--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "dev-debug": "NODE_OPTIONS='--inspect=0.0.0.0:9229' next dev",
     "lint": "biome lint .",
     "format": "biome format --write .",
-    "check": "biome check --write ."
+    "check": "biome check --write .",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@prisma/adapter-mariadb": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -50,6 +53,7 @@
     "input-otp": "1.4.1",
     "lightningcss": "^1.30.2",
     "lucide-react": "^0.454.0",
+    "mariadb": "^3.4.5",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
@@ -71,6 +75,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
+    "prisma": "^7.2.0",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
