--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,9 @@ services:
     tty: true
     environment:
       NODE_ENV: development
-      PRISMA_DATABASE_URL: mysql://docker:docker@db:3306/willfit
+      TZ: Asia/Tokyo
+      NEXT_PUBLIC_TIMEZONE: Asia/Tokyo
+      PRISMA_DATABASE_URL: mysql://docker:docker@db:3306/willfit?timezone=Asia/Tokyo
     restart: always
     depends_on:
       - db
@@ -67,8 +69,8 @@ services:
       MYSQL_USER: docker
       MYSQL_PASSWORD: docker
       TZ: "Asia/Tokyo"
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
+      - ./docker/mysql/conf.d:/etc/mysql/conf.d:ro
       - ./docker/mysql/dump:/docker-entrypoint-initdb.d
       - ./docker/mysql/data:/var/lib/mysql
     restart: on-failure
