--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,9 @@ next-env.d.ts
 prisma/migrations/migration_lock.toml
 /docker/mysql/*
 /docs
+.claude
 .vscode
 .cursor
 memo.txt
 AGENTS.md
+CLAUDE.md
